# FLC

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
src/db/: crud.py  models.py
src/gui/forms/: modification_form.py  payment_form.py  project_details.py  project_form.py
src/gui/windows/: main_window.py
src/utils/: plot_utils.py
