[project]
name = "freelance-compass"
version = "0.1.0"
description = "Professional project management system for freelancers"
requires-python = ">=3.12"
authors = [
    { name = "Denis 🦊 (TheFoxKD)", email = "krishtopadenis@gmail.com" }
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --cov=flc --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["docs/*"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
